--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" android:protectionLevel="signature"/>
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="thaichana_helper"
-        android:icon="@mipmap/ic_launcher">
+        android:label="ตัวช่วยไทยชนะ"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
