--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   permission_handler: '^3.0.0'
   flutter_qr_reader: ^1.0.3
   webview_flutter: ^0.3.22
+  shared_preferences: ^0.5.7+3
+  share: ^0.5.3
 
 dev_dependencies:
   flutter_test:
