--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.7.3"
 
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  
 flutter:
 
   uses-material-design: true
