--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: thaichana_helper
-description: A new Flutter project.
+description: Thai chana helper application.
 
 publish_to: 'none' 
 
-version: 1.0.4+5
+version: 1.0.6+6
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -27,7 +27,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.7.3"
 
 flutter_icons:
-  android: "launcher_icon"
+  android: "ตัวช่วยไทยชนะ"
   ios: true
   image_path: "assets/icon/icon.png"
   
