--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Thai chana helper application.
 
 publish_to: 'none' 
 
-version: 1.0.7+7
+version: 1.0.8+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -20,7 +20,8 @@ dependencies:
   webview_flutter: ^0.3.22
   shared_preferences: ^0.5.7+3
   # share: ^0.5.3
-
+  flutter_webview_plugin: ^0.3.11
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
