--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   # share: ^0.5.3
   flutter_webview_plugin: ^0.3.11
+  package_info: ^0.4.0+16
 
 dev_dependencies:
   flutter_test:
