--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Thai chana helper application.
 
 publish_to: 'none' 
 
-version: 1.0.10+2011
+version: 1.0.11+2013
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -17,11 +17,12 @@ dependencies:
 
   permission_handler: '^3.0.0'
   flutter_qr_reader: ^1.0.3
-  webview_flutter: ^0.3.22
+  # webview_flutter: ^0.3.22
   shared_preferences: ^0.5.7+3
   # share: ^0.5.3
-  flutter_webview_plugin: ^0.3.11
+  # flutter_webview_plugin: ^0.3.11
   package_info: ^0.4.0+16
+  easy_web_view: ^1.3.0
 
 dev_dependencies:
   flutter_test:
